feat(gc-cms test):